--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appdirs==1.4.4
 certifi==2023.7.22
 charset-normalizer==3.2.0
+customtkinter==5.2.0
+darkdetect==0.8.0
 idna==3.4
 requests==2.31.0
 urllib3==2.0.4
