--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,56 @@
-appdirs==1.4.4
-certifi==2023.7.22
-charset-normalizer==3.2.0
-customtkinter==5.2.0
-darkdetect==0.8.0
-idna==3.4
-requests==2.31.0
-urllib3==2.0.4
+aiodns==3.0.0
+asynctest==0.13.0
+brotli==1.1.0
+brotlicffi==1.1.0.0
+cchardet==2.1.7
+cffi==1.15.1
+cleo==2.0.1
+ConfigParser==6.0.0
+cryptography==41.0.4
+Cython==3.0.2
+defusedxml==0.7.1
+Dialog==0.2.0
+dl==0.1.0
+docutils==0.20.1
+Foundation==0.1.0a0.dev1
+geo==0.1
+gunicorn==21.2.0
+HTMLParser==0.0.2
+hypothesis==6.86.2
+idna_ssl==1.1.0
+ipython==8.15.0
+ipywidgets==8.1.1
+Jinja2==3.1.2
+jnius==1.1.0
+keyring==24.2.0
+lockfile==0.12.2
+lxml==4.9.3
+mock==5.1.0
+mtrand==0.1
+mypy==1.5.1
+numarray==1.5.1
+Numeric==24.2
+olefile==0.46
+pickle5==0.0.12
+psutil==5.9.5
+PyInstaller==5.13.2
+pyOpenSSL==23.2.0
+PyQt6==6.5.2
+PySide6==6.5.2
+pytest==7.4.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+railroad==0.5.0
+requests_oauthlib==1.3.1
+simplejson==3.19.1
+Sphinx==7.2.6
+threadpoolctl==3.2.0
+tokio==0.2.0
+toml==0.10.2
+tornado==6.3.3
+trove_classifiers==2023.9.19
+unittest2==1.1.0
+urllib3_secure_extra==0.1.0
+uvloop==0.17.0
+xmlrpclib==1.0.1
+zstandard==0.21.0
