--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,77 @@
 aiodns==3.0.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+appdirs==1.4.4
+asttokens==2.4.0
+async-timeout==4.0.3
 asynctest==0.13.0
-brotli==1.1.0
+attrs==23.1.0
+backcall==0.2.0
+Brotli==1.1.0
 brotlicffi==1.1.0.0
+cachetools==5.3.1
 cchardet==2.1.7
+certifi==2023.7.22
 cffi==1.15.1
+charset-normalizer==3.2.0
 cleo==2.0.1
-ConfigParser==6.0.0
+comm==0.1.4
+configparser==6.0.0
+crashtest==0.4.1
 cryptography==41.0.4
+customtkinter==5.2.0
 Cython==3.0.2
+darkdetect==0.8.0
+decorator==5.1.1
 defusedxml==0.7.1
-Dialog==0.2.0
+Django==1.10.8
+django-classy-tags==0.8.0
+django-sekizai==0.10.0
 dl==0.1.0
 docutils==0.20.1
-Foundation==0.1.0a0.dev1
-geo==0.1
+exceptiongroup==1.1.3
+executing==1.2.0
+foundation==0.1.0a0.dev1
+frozenlist==1.4.0
+geographiclib==2.0
+geopy==2.4.0
 gunicorn==21.2.0
+h3==3.7.6
 HTMLParser==0.0.2
 hypothesis==6.86.2
-idna_ssl==1.1.0
+idna==3.4
+idna-ssl==1.1.0
+ipinfo==4.4.3
 ipython==8.15.0
 ipywidgets==8.1.1
-Jinja2==3.1.2
-jnius==1.1.0
-keyring==24.2.0
-lockfile==0.12.2
-lxml==4.9.3
-mock==5.1.0
-mtrand==0.1
-mypy==1.5.1
-numarray==1.5.1
-Numeric==24.2
-olefile==0.46
-pickle5==0.0.12
-psutil==5.9.5
-PyInstaller==5.13.2
-pyOpenSSL==23.2.0
-PyQt6==6.5.2
-PySide6==6.5.2
-pytest==7.4.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-railroad==0.5.0
-requests_oauthlib==1.3.1
-simplejson==3.19.1
-Sphinx==7.2.6
-threadpoolctl==3.2.0
-tokio==0.2.0
-toml==0.10.2
-tornado==6.3.3
-trove_classifiers==2023.9.19
-unittest2==1.1.0
-urllib3_secure_extra==0.1.0
-uvloop==0.17.0
-xmlrpclib==1.0.1
-zstandard==0.21.0
+jedi==0.19.0
+jupyterlab-widgets==3.0.9
+matplotlib-inline==0.1.6
+multidict==6.0.4
+numpy==1.26.0
+packaging==23.1
+parso==0.8.3
+pendulum==2.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.1
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycares==4.3.0
+pycparser==2.21
+Pygments==2.16.1
+python-dateutil==2.8.2
+pytzdata==2020.1
+rapidfuzz==2.15.1
+requests==2.31.0
+six==1.16.0
+sortedcontainers==2.4.0
+stack-data==0.6.2
+timezonefinder==6.2.0
+traitlets==5.10.0
+typing_extensions==4.8.0
+urllib3==2.0.5
+wcwidth==0.2.6
+widgetsnbextension==4.0.9
+yarl==1.9.2
